# masters-cbir

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml
archive/docs/: MODELS.md  PLAN_01.md
archive/mvp/: HOWTOUSE.md  data_prep.py  evaluate.py  extract.py  notebook.ipynb  sampling.py
cbir/: __init__.py  cli.py  config.py  knn.py  observability.py  sample.py  service.py
cbir/analysis/: __init__.py  knn.py  projection.py
cbir/api/: __init__.py  app.py
cbir/app/: client.py  streamlit_app.py
cbir/common/: __init__.py  models.py  observability.py
cbir/core/: __init__.py  extractor.py  manifest.py  milvus_client.py
cbir/data/: __init__.py  sample.py
cbir/index/: __init__.py  cache.py  indexer.py
cbir/sample_data/: embeddings.parquet  manifest.jsonl
cbir/service/: __init__.py  service.py
cbir/viz/: __init__.py  projection.py
docs/: CONSIDERATIONS_01.md  DATA.md  RELATORIO.md  REPORT.md
mvp/: HOWTOUSE.md  README.md  data_prep.py  db.py  ingest.py  notebook.ipynb  visualize.py
report/: .gitignore  main.tex
report/bib/: IEEEreferences.bib  references.bib
tests/: test_api.py  test_knn.py  test_manifest.py  test_models.py  test_projection.py  test_scatter.py
