[project]
name = "cbir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hdbscan>=0.8.40",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "open-clip-torch>=3.3.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pymilvus>=2.6.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]
