[project]
name = "cbir"
version = "0.1.0"
description = "Content-Based Image Retrieval for vessel bounding-box crops: index embeddings into Milvus and explore the vector space (PCA + KNN) through a Streamlit frontend over a FastAPI backend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "hdbscan>=0.8.40",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "open-clip-torch>=3.3.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pydantic>=2",
    "pymilvus>=2.6.0",
    "requests>=2.33.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.58.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "typer>=0.24.1",
    "umap-learn>=0.5.7",
    "uvicorn[standard]>=0.50.0",
]

[project.scripts]
cbir = "cbir.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbir"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["mvp", "archive", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "N", "RET", "RUF", "PTH", "ARG"]
ignore = [
    "B008",  # typer relies on function-call defaults (Option/Argument)
    "C408",  # plotly's API is built on dict(...) kwargs; keep them as-is
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # test fakes take unused args to match the real signature

[tool.mypy]
python_version = "3.13"
files = ["cbir"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
